--- a/index.html
+++ b/index.html
@@ -1499,12 +1499,12 @@ Table&nbsp;8: Relative RMSE Quadratic
 </tr>
 <tr class="even">
 <td style="text-align: right;">200</td>
-<td style="text-align: right;">0.99</td>
-<td style="text-align: right;">0.99</td>
-<td style="text-align: right; font-weight: bold; color: green !important;">1.00</td>
 <td style="text-align: right;">1.00</td>
 <td style="text-align: right;">1.00</td>
+<td style="text-align: right; font-weight: bold; color: green !important;">1.01</td>
 <td style="text-align: right;">1.01</td>
+<td style="text-align: right;">1.01</td>
+<td style="text-align: right;">1.02</td>
 <td style="text-align: right; font-weight: bold; color: green !important;">1.00</td>
 </tr>
 <tr class="odd">
@@ -2689,7 +2689,7 @@ FYT
 </section><section id="references-scrollable" class="slide level2 allowframebreaks smaller scrollable"><h2>References (scrollable)</h2>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
-<p>Boundary Corrected Adaptive CKDE | © Jeffrey S. Racine</p>
+<p>Boundary Corrected Adaptive CKDE | <a href="https://jeffreyracine.github.io/bk" class="uri">https://jeffreyracine.github.io/bk</a> |© Jeffrey S. Racine</p>
 </div>
 </div>
 <div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
