--- a/index.html
+++ b/index.html
@@ -792,13 +792,21 @@ Figure&nbsp;2: Simulated data from <span class="math inline">\(N(0,1)\)</span> a
 <span id="cb4-4"><a href=""></a>x <span class="ot">&lt;-</span> <span class="fu">runif</span>(n)</span>
 <span id="cb4-5"><a href=""></a>y <span class="ot">&lt;-</span> <span class="fu">rbeta</span>(n,<span class="dv">1</span>,<span class="dv">1</span>)</span>
 <span id="cb4-6"><a href=""></a>f <span class="ot">&lt;-</span> <span class="fu">bkcde</span>(<span class="at">x=</span>x,<span class="at">y=</span>y,<span class="at">proper=</span><span class="cn">TRUE</span>)</span>
-<span id="cb4-7"><a href=""></a>dgp <span class="ot">&lt;-</span> <span class="fu">dbeta</span>(f<span class="sc">$</span>y.eval,<span class="dv">1</span>,<span class="dv">1</span>)</span>
-<span id="cb4-8"><a href=""></a><span class="fu">par</span>(<span class="at">mfrow=</span><span class="fu">c</span>(<span class="dv">1</span>,<span class="dv">2</span>),<span class="at">cex=</span>.<span class="dv">75</span>,<span class="at">mar=</span><span class="fu">c</span>(<span class="dv">2</span>,<span class="dv">2</span>,<span class="dv">2</span>,<span class="dv">1</span>))</span>
-<span id="cb4-9"><a href=""></a>zlim <span class="ot">&lt;-</span> <span class="fu">range</span>(f<span class="sc">$</span>f,dgp,<span class="dv">0</span>,<span class="dv">2</span>)</span>
-<span id="cb4-10"><a href=""></a><span class="fu">plot</span>(f,<span class="at">main=</span><span class="fu">paste</span>(<span class="st">"Estimated Density, n = "</span>,n),<span class="at">zlim=</span>zlim)</span>
-<span id="cb4-11"><a href=""></a><span class="fu">persp</span>(<span class="fu">unique</span>(f<span class="sc">$</span>x.eval),<span class="fu">unique</span>(f<span class="sc">$</span>y.eval),</span>
-<span id="cb4-12"><a href=""></a>      <span class="fu">matrix</span>(dgp,<span class="at">nrow=</span><span class="fu">length</span>(<span class="fu">unique</span>(f<span class="sc">$</span>x.eval))),</span>
-<span id="cb4-13"><a href=""></a>      <span class="at">theta=</span><span class="dv">120</span>,<span class="at">phi=</span><span class="dv">45</span>,<span class="at">ticktype=</span><span class="st">"detailed"</span>,<span class="at">xlab=</span><span class="st">"x"</span>,<span class="at">ylab=</span><span class="st">"y"</span>,<span class="at">zlab=</span><span class="st">"f(y|x)"</span>,<span class="at">zlim=</span>zlim,<span class="at">main=</span><span class="st">"True density"</span>)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
+<span id="cb4-7"><a href=""></a>f.classic <span class="ot">&lt;-</span> <span class="fu">bkcde</span>(<span class="at">x=</span>x,<span class="at">y=</span>y,<span class="at">proper=</span><span class="cn">TRUE</span>,</span>
+<span id="cb4-8"><a href=""></a>                   <span class="at">y.ub=</span><span class="cn">Inf</span>,</span>
+<span id="cb4-9"><a href=""></a>                   <span class="at">y.lb=</span><span class="sc">-</span><span class="cn">Inf</span>,</span>
+<span id="cb4-10"><a href=""></a>                   <span class="at">x.ub=</span><span class="cn">Inf</span>,</span>
+<span id="cb4-11"><a href=""></a>                   <span class="at">x.lb=</span><span class="sc">-</span><span class="cn">Inf</span>,</span>
+<span id="cb4-12"><a href=""></a>                   <span class="at">degree.min=</span><span class="dv">0</span>,</span>
+<span id="cb4-13"><a href=""></a>                   <span class="at">degree.max=</span><span class="dv">0</span>)</span>
+<span id="cb4-14"><a href=""></a>dgp <span class="ot">&lt;-</span> <span class="fu">dbeta</span>(f<span class="sc">$</span>y.eval,<span class="dv">1</span>,<span class="dv">1</span>)</span>
+<span id="cb4-15"><a href=""></a><span class="fu">par</span>(<span class="at">mfrow=</span><span class="fu">c</span>(<span class="dv">1</span>,<span class="dv">3</span>),<span class="at">cex=</span>.<span class="dv">75</span>,<span class="at">mar=</span><span class="fu">c</span>(<span class="dv">2</span>,<span class="dv">2</span>,<span class="dv">2</span>,<span class="dv">1</span>))</span>
+<span id="cb4-16"><a href=""></a>zlim <span class="ot">&lt;-</span> <span class="fu">range</span>(f<span class="sc">$</span>f,f.classic<span class="sc">$</span>f,dgp,<span class="dv">0</span>,<span class="dv">2</span>)</span>
+<span id="cb4-17"><a href=""></a><span class="fu">plot</span>(f.classic,<span class="at">main=</span><span class="fu">paste</span>(<span class="st">"Estimated Density (Classic, p = 0), n = "</span>,n),<span class="at">zlim=</span>zlim)</span>
+<span id="cb4-18"><a href=""></a><span class="fu">plot</span>(f,<span class="at">main=</span><span class="fu">paste</span>(<span class="st">"Estimated Density (Bounded, p = "</span>,f<span class="sc">$</span>degree,<span class="st">"), n = "</span>,n,<span class="at">sep=</span><span class="st">""</span>),<span class="at">zlim=</span>zlim)</span>
+<span id="cb4-19"><a href=""></a><span class="fu">persp</span>(<span class="fu">unique</span>(f<span class="sc">$</span>x.eval),<span class="fu">unique</span>(f<span class="sc">$</span>y.eval),</span>
+<span id="cb4-20"><a href=""></a>      <span class="fu">matrix</span>(dgp,<span class="at">nrow=</span><span class="fu">length</span>(<span class="fu">unique</span>(f<span class="sc">$</span>x.eval))),</span>
+<span id="cb4-21"><a href=""></a>      <span class="at">theta=</span><span class="dv">120</span>,<span class="at">phi=</span><span class="dv">45</span>,<span class="at">ticktype=</span><span class="st">"detailed"</span>,<span class="at">xlab=</span><span class="st">"x"</span>,<span class="at">ylab=</span><span class="st">"y"</span>,<span class="at">zlab=</span><span class="st">"f(y|x)"</span>,<span class="at">zlim=</span>zlim,<span class="at">main=</span><span class="st">"True density"</span>)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
 
 </div>
@@ -812,7 +820,7 @@ Figure&nbsp;2: Simulated data from <span class="math inline">\(N(0,1)\)</span> a
 <img data-src="index_files/figure-revealjs/fig-conditional-kde-uniform-1.png" style="width:80.0%">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-conditional-kde-uniform-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;3: Conditional KDE for <span class="math inline">\(U[0,1]\)</span> with empirical bounds
+Figure&nbsp;3: Conditional KDE for <span class="math inline">\(U[0,1]\)</span> with classical bounds (<span class="math inline">\(Y\in[-\infty,\infty]\)</span>, <span class="math inline">\(p=0\)</span>), empirical bounds with adaptive polynomial choice (<span class="math inline">\(Y\in[\min(Y),\max(Y)]\)</span>)
 </figcaption></figure>
 </div>
 </div>
@@ -1010,30 +1018,30 @@ Table&nbsp;1: Relative RMSE Irrelevant
 <tbody>
 <tr class="odd">
 <td style="text-align: right;">100</td>
-<td style="text-align: right; font-weight: bold; color: green !important;">0.81</td>
-<td style="text-align: right;">0.97</td>
-<td style="text-align: right;">1.07</td>
-<td style="text-align: right;">1.19</td>
-<td style="text-align: right;">1.24</td>
-<td style="text-align: right;">1.28</td>
+<td style="text-align: right; font-weight: bold; color: green !important;">0.79</td>
+<td style="text-align: right;">0.95</td>
+<td style="text-align: right;">1.06</td>
+<td style="text-align: right;">1.16</td>
+<td style="text-align: right;">1.21</td>
+<td style="text-align: right;">1.25</td>
 <td style="text-align: right; font-weight: bold; color: green !important;">1.00</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">200</td>
-<td style="text-align: right; font-weight: bold; color: green !important;">0.88</td>
-<td style="text-align: right;">1.04</td>
-<td style="text-align: right;">1.16</td>
-<td style="text-align: right;">1.29</td>
-<td style="text-align: right;">1.36</td>
-<td style="text-align: right;">1.44</td>
+<td style="text-align: right; font-weight: bold; color: green !important;">0.91</td>
+<td style="text-align: right;">1.06</td>
+<td style="text-align: right;">1.19</td>
+<td style="text-align: right;">1.32</td>
+<td style="text-align: right;">1.39</td>
+<td style="text-align: right;">1.48</td>
 <td style="text-align: right; font-weight: bold; color: green !important;">1.00</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">400</td>
 <td style="text-align: right; font-weight: bold; color: green !important;">0.93</td>
-<td style="text-align: right;">1.13</td>
+<td style="text-align: right;">1.17</td>
 <td style="text-align: right;">1.26</td>
-<td style="text-align: right;">1.42</td>
+<td style="text-align: right;">1.41</td>
 <td style="text-align: right;">1.57</td>
 <td style="text-align: right;">1.67</td>
 <td style="text-align: right; font-weight: bold; color: green !important;">1.00</td>
@@ -1338,12 +1346,12 @@ Table&nbsp;5: Relative RMSE Irrelevant
 </tr>
 <tr class="even">
 <td style="text-align: right; font-weight: bold; color: lightgreen !important;">800</td>
-<td style="text-align: right; font-weight: bold; color: lightgreen !important; font-weight: bold; color: green !important;">1.00</td>
-<td style="text-align: right; font-weight: bold; color: lightgreen !important;">1.33</td>
-<td style="text-align: right; font-weight: bold; color: lightgreen !important;">1.59</td>
-<td style="text-align: right; font-weight: bold; color: lightgreen !important;">1.81</td>
-<td style="text-align: right; font-weight: bold; color: lightgreen !important;">2.04</td>
-<td style="text-align: right; font-weight: bold; color: lightgreen !important;">2.24</td>
+<td style="text-align: right; font-weight: bold; color: lightgreen !important; font-weight: bold; color: green !important;">0.98</td>
+<td style="text-align: right; font-weight: bold; color: lightgreen !important;">1.29</td>
+<td style="text-align: right; font-weight: bold; color: lightgreen !important;">1.55</td>
+<td style="text-align: right; font-weight: bold; color: lightgreen !important;">1.76</td>
+<td style="text-align: right; font-weight: bold; color: lightgreen !important;">1.95</td>
+<td style="text-align: right; font-weight: bold; color: lightgreen !important;">2.12</td>
 <td style="text-align: right; font-weight: bold; color: lightgreen !important; font-weight: bold; color: green !important;">1.00</td>
 </tr>
 </tbody>
@@ -1544,12 +1552,12 @@ Table&nbsp;8: Relative RMSE Quadratic
 </tr>
 <tr class="odd">
 <td style="text-align: right;">400</td>
-<td style="text-align: right;">1.03</td>
-<td style="text-align: right;">1.01</td>
+<td style="text-align: right;">1.02</td>
+<td style="text-align: right;">1.00</td>
 <td style="text-align: right; font-weight: bold; color: green !important;">0.99</td>
 <td style="text-align: right;">0.98</td>
-<td style="text-align: right;">1.00</td>
-<td style="text-align: right;">1.02</td>
+<td style="text-align: right;">0.99</td>
+<td style="text-align: right;">1.01</td>
 <td style="text-align: right; font-weight: bold; color: green !important;">1.00</td>
 </tr>
 <tr class="even">
@@ -1601,20 +1609,20 @@ Table&nbsp;9: Median Relative RMSE
 <tr class="odd">
 <td style="text-align: right;">100</td>
 <td style="text-align: right;">1.00</td>
-<td style="text-align: right;">1.23</td>
-<td style="text-align: right;">1.41</td>
+<td style="text-align: right;">1.20</td>
+<td style="text-align: right;">1.39</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">200</td>
 <td style="text-align: right;">1.00</td>
-<td style="text-align: right;">1.59</td>
-<td style="text-align: right;">1.83</td>
+<td style="text-align: right;">1.57</td>
+<td style="text-align: right;">1.86</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">400</td>
 <td style="text-align: right;">1.00</td>
-<td style="text-align: right;">2.09</td>
-<td style="text-align: right;">2.28</td>
+<td style="text-align: right;">2.08</td>
+<td style="text-align: right;">2.27</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">800</td>
@@ -1833,8 +1841,8 @@ Table&nbsp;13: Median Relative RMSE
 <tr class="even">
 <td style="text-align: right;">800</td>
 <td style="text-align: right;">1.00</td>
-<td style="text-align: right;">0.97</td>
-<td style="text-align: right;">1.28</td>
+<td style="text-align: right;">0.93</td>
+<td style="text-align: right;">1.26</td>
 </tr>
 </tbody>
 </table>
@@ -1981,7 +1989,7 @@ Table&nbsp;16: Median Relative RMSE
 <tr class="odd">
 <td style="text-align: right;">400</td>
 <td style="text-align: right;">1.00</td>
-<td style="text-align: right;">1.01</td>
+<td style="text-align: right;">1.00</td>
 <td style="text-align: right;">0.95</td>
 </tr>
 <tr class="even">
